--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -7,7 +7,7 @@
   h1 {
     margin: 0;
     padding-bottom: 0.5em;
-    font:  250% sans-serif;
+    font:  150% sans-serif;
     color: #226;
     border-bottom: 3px dotted #77d;
   }
@@ -35,11 +35,19 @@
       color: #227;
     }
 
+    //#START:inline
     p, div.price_line {
       margin-left: 100px;
       margin-top: 0.5em;
       margin-bottom: 0.8em;
+
+      /* START_HIGHLIGHT */
+      form, div {
+        display: inline;
+      }
+      /* END_HIGHLIGHT */
     }
+    //#END:inline
 
     .price {
       color: #44a;
