--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -13,6 +13,7 @@
         <!-- START:currency -->
         <span class="price"><%= number_to_currency(product.price) %></span>
         <!-- END:currency -->
+        <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
       </div>
     </div>
 <% end %>
